# food-cop.ai

./: .gitignore  Dockerfile  README.md  index.html  inference.py  license  main.py  openenv.yaml  package-lock.json  pyproject.toml  requirements.txt
server/: __init__.py  app.py  init.py  reward_core.py
server/graders/: __init__.py  easy_grader.py  food_grader.py  hard_grader.py  medium_grader.py  scoring.py
server/static/: index.html
server/static/css/: style.css
server/static/js/: app.js
