[project]
name = "food-cop-openenv"
version = "0.1.0"
description = "AI food safety inspection environment using OpenEnv"
authors = [
    { name="Tejasv Sahu" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "groq",
    "openai"
]
[project.scripts]
server = "server.app:main"
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"